--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <nav class="nav">
                 <div class="logo">
-                    <a href="#home">Portfolio</a>
+                    <a href="#home">My Portfolio</a>
                 </div>
                 <div class="nav-toggle">
                     <span></span>
@@ -243,10 +243,10 @@
                         <p>No: 6/3,<br>Aswalapitiya, <br>Kengalla, <br>Kandy, Sri Lanka</p>
                     </div>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/sandeepa-sineth-186213288" class="social-link"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/Sandeepasineth" class="social-link"><i class="fab fa-github"></i></a>
+                        <a href="https://www.facebook.com/share/1A8UwW4wid/" class="social-link"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/sandeepasineth?igsh=YnFpcWdiZTdzOW4w" class="social-link"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="contact-form" data-aos="fade-left">
