--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <nav class="nav">
                 <div class="logo">
-                    <a href="#home">My Portfolio</a>
+                    <a href="#home">Portfolio</a>
                 </div>
                 <div class="nav-toggle">
                     <span></span>
@@ -47,7 +47,7 @@
                     <h2>Passionate about Data Science </h2>
                     <p>Transforming complex data into meaningful insights</p>
                     <div class="hero-buttons">
-                        <a href="#projects" class="btn btn-primary">View Projects</a>
+                        <a href="Files\CV.pdf" class="btn btn-primary" target="_blank">Download CV</a>
                         <a href="#contact" class="btn btn-secondary">Contact Me</a>
                     </div>
                 </div>
@@ -121,10 +121,7 @@
                             <span class="stat-number">20+</span>
                             <span class="stat-text">Projects Completed</span>
                         </div>
-                        <div class="stat">
-                            <span class="stat-number">30+</span>
-                            <span class="stat-text">Happy Clients</span>
-                        </div>
+                        
                         <div class="stat">
                             <span class="stat-number">15+</span>
                             <span class="stat-text">Awards Won</span>
@@ -243,10 +240,10 @@
                         <p>No: 6/3,<br>Aswalapitiya, <br>Kengalla, <br>Kandy, Sri Lanka</p>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/sandeepa-sineth-186213288" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/Sandeepasineth" class="social-link"><i class="fab fa-github"></i></a>
-                        <a href="https://www.facebook.com/share/1A8UwW4wid/" class="social-link"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/sandeepasineth?igsh=YnFpcWdiZTdzOW4w" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="contact-form" data-aos="fade-left">
@@ -264,7 +261,7 @@
                             <label for="subject">Subject</label>
                         </div>
                         <div class="form-group">
-                            <textarea id="message" required></textarea>
+                            <textarea id="message" rows="3" required></textarea>
                             <label for="message">Your Message</label>
                         </div>
                         <center><button type="submit" class="submit">Send Message</button></center>
@@ -303,6 +300,7 @@
     </button>
 
     <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="script.js"></script>
 </body>
