--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
                     </div>
                 </div>
                 <div class="contact-form" data-aos="fade-left">
-                    <form id="contactForm">
+                    <form id="contactForm" action="https://formspree.io/f/mvgkwlrj" method="POST">
+                        
                         <div class="form-group">
                             <input type="text" id="name" required>
                             <label for="name">Your Name</label>
