--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         
                         <div class="form-group">
                             <input type="text" id="name" required>
-                            <label for="name">Your Name</label>
+                            <label for="name">Your Name.</label>
                         </div>
                         <div class="form-group">
                             <input type="email" id="email" required>
