Refactor contact form input fieldstest

--- a/index.html
+++ b/index.html
@@ -261,20 +261,20 @@
                 <div class="contact-form" data-aos="fade-left">
                     <form id="contactForm" action="https://formspree.io/f/mvgkwlrj" method="POST">
                         
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <input type="text" id="name" required>
                             <label for="name">Your Name.</label>
-                        </div>
+                        </div> -->
                         <div class="form-group">
-                            <input type="email" id="email" required>
+                            <input type="email" id="email" name="email" required>
                             <label for="email">Your Email</label>
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <input type="text" id="subject" required>
                             <label for="subject">Subject</label>
-                        </div>
+                        </div> -->
                         <div class="form-group">
-                            <textarea id="message" rows="3" required></textarea>
+                            <textarea id="message" name="message" rows="3" required></textarea>
                             <label for="message">Your Message</label>
                         </div>
                         <center><button type="submit" class="submit">Send Message</button></center>
